# xio

./: .gitignore  1.txt  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  kmpkg.json  setup.py  summary.md  summary_business.md
benchmark/: CMakeLists.txt  config.h  event_timer_bench.cc
benchmark/raft/: CMakeLists.txt  raft_bench.cc  raft_bench.cxx
cmake/: xio_config.cmake.in  (+4 more)
examples/cpp17/: CMakeLists.txt  Makefile.am
examples/cpp17/allocation/: CMakeLists.txt  server.cpp
examples/cpp17/buffers/: CMakeLists.txt  reference_counted.cpp
examples/cpp17/chat/: CMakeLists.txt  chat_server.cpp  posix_chat_client.cpp
examples/cpp17/coroutines_ts/: chat_server.cpp  echo_server.cpp  echo_server_with_as_single_default.cpp  echo_server_with_as_tuple_default.cpp  range_based_for.cpp  refactored_echo_server.cpp
examples/cpp17/deferred/: CMakeLists.txt  deferred_1.cpp
examples/cpp17/echo/: CMakeLists.txt  async_tcp_echo_server.cpp  async_udp_echo_server.cpp  blocking_tcp_echo_client.cpp  blocking_tcp_echo_server.cpp  blocking_udp_echo_server.cpp
examples/cpp17/executors/: CMakeLists.txt  bank_account_2.cpp  pipeline.cpp  priority_scheduler.cpp
examples/cpp17/files/: CMakeLists.txt  async_file_copy.cpp  blocking_file_copy.cpp
examples/cpp17/fork/: CMakeLists.txt  daemon.cpp  process_per_connection.cpp
examples/cpp17/futures/: CMakeLists.txt
examples/cpp17/handler_tracking/: CMakeLists.txt  async_tcp_echo_server.cpp  custom_tracking.hpp
examples/cpp17/http/: CMakeLists.txt
examples/cpp17/http/client/: CMakeLists.txt  async_client.cpp  sync_client.cpp
examples/cpp17/http/server/: CMakeLists.txt  connection.cpp  main.cpp  reply.cpp  server.cpp  server.hpp
examples/cpp17/icmp/: CMakeLists.txt  ping.cpp
examples/cpp17/invocation/: CMakeLists.txt  prioritised_handlers.cpp
examples/cpp17/iostreams/: CMakeLists.txt  daytime_client.cpp  daytime_server.cpp
examples/cpp17/local/: CMakeLists.txt  connect_pair.cpp  fd_passing_stream_client.cpp  fd_passing_stream_server.cpp  iostream_client.cpp  stream_client.cpp  stream_server.cpp
examples/cpp17/multicast/: CMakeLists.txt  receiver.cpp
examples/cpp17/nonblocking/: CMakeLists.txt  third_party_lib.cpp
examples/cpp17/operations/: CMakeLists.txt  composed_3.cpp  composed_4.cpp  composed_6.cpp  composed_7.cpp
examples/cpp17/parallel_group/: CMakeLists.txt  wait_for_all.cpp  wait_for_one.cpp  wait_for_one_error.cpp  wait_for_one_success.cpp
examples/cpp17/porthopper/: CMakeLists.txt  client.cpp  server.cpp
examples/cpp17/serialization/: CMakeLists.txt  archive.hpp  client.cpp  connection.hpp  server.cpp  stock.hpp
examples/cpp17/services/: CMakeLists.txt  basic_logger.hpp  daytime_client.cpp  logger_service.hpp
examples/cpp17/socks4/: CMakeLists.txt  socks4.hpp  sync_client.cpp
examples/cpp17/spawn/: CMakeLists.txt  echo_server.cpp  parallel_grep.cpp
examples/cpp17/ssl/: CMakeLists.txt  server.cpp
examples/cpp17/timeouts/: CMakeLists.txt  async_tcp_client.cpp  blocking_tcp_client.cpp  blocking_udp_client.cpp  server.cpp
examples/cpp17/timers/: CMakeLists.txt  time_t_timer.cpp
examples/cpp17/tutorial/: CMakeLists.txt  index_dox.txt  timer_dox.txt
examples/cpp17/type_erasure/: CMakeLists.txt  line_reader.hpp  main.cpp  sleep.cpp  sleep.hpp
examples/cpp17/windows/: CMakeLists.txt  transmit_file.cpp
tests/unit/: CMakeLists.txt  any_completion_executor.cpp  any_completion_handler.cpp  any_io_executor.cpp  append.cpp  as_tuple.cpp  associated_allocator.cpp  associated_cancellation_slot.cpp  associated_executor.cpp  associated_immediate_executor.cpp  associator.cpp  async_result.cpp  awaitable.cpp  basic_datagram_socket.cpp  basic_deadline_timer.cpp  basic_file.cpp  basic_random_access_file.cpp  basic_raw_socket.cpp  basic_readable_pipe.cpp  basic_seq_packet_socket.cpp  basic_serial_port.cpp  basic_signal_set.cpp  basic_socket.cpp  basic_socket_acceptor.cpp  basic_stream_file.cpp  basic_stream_socket.cpp  basic_streambuf.cpp  basic_waitable_timer.cpp  basic_writable_pipe.cpp  bind_allocator.cpp  bind_cancellation_slot.cpp  bind_executor.cpp  bind_immediate_executor.cpp  buffer.cpp  buffer_registration.cpp  buffered_read_stream.cpp  buffered_stream.cpp  buffered_write_stream.cpp  buffers_iterator.cpp  cancel_after.cpp  (+74 more)
tests/unit/archetypes/: async_ops.hpp  async_result.hpp
tests/unit/execution/: any_executor.cpp  blocking.cpp  blocking_adaptation.cpp  context_as.cpp  executor.cpp  inline_exception_handling.cpp  invocable_archetype.cpp  mapping.cpp  outstanding_work.cpp  prefer_only.cpp  relationship.cpp
tests/unit/experimental/: awaitable_operators.cpp  basic_channel.cpp  basic_concurrent_channel.cpp  channel.cpp  channel_traits.cpp  co_composed.cpp  concurrent_channel.cpp  parallel_group.cpp  promise.cpp
tests/unit/generic/: basic_endpoint.cpp  datagram_protocol.cpp  raw_protocol.cpp  seq_packet_protocol.cpp  stream_protocol.cpp
tests/unit/ip/: .gitignore  address.cpp  address_v4.cpp  address_v4_iterator.cpp  address_v4_range.cpp  address_v6.cpp  address_v6_iterator.cpp  address_v6_range.cpp  basic_endpoint.cpp  basic_resolver.cpp  basic_resolver_entry.cpp  basic_resolver_iterator.cpp  basic_resolver_query.cpp  host_name.cpp  icmp.cpp  multicast.cpp  network_v4.cpp  network_v6.cpp  resolver_query_base.cpp  tcp.cpp  udp.cpp  unicast.cpp  v6_only.cpp
tests/unit/local/: basic_endpoint.cpp  connect_pair.cpp  datagram_protocol.cpp  seq_packet_protocol.cpp  stream_protocol.cpp
tests/unit/posix/: basic_descriptor.cpp  basic_stream_descriptor.cpp  descriptor.cpp  descriptor_base.cpp  stream_descriptor.cpp
tests/unit/ssl/: context.cpp  context_base.cpp  error.cpp  host_name_verification.cpp  stream.cpp  stream_base.cpp
tests/unit/ts/: buffer.cpp  executor.cpp  internet.cpp  io_context.cpp  net.cpp  netfwd.cpp  socket.cpp  timer.cpp
tests/unit/windows/: basic_object_handle.cpp  basic_overlapped_handle.cpp  basic_random_access_handle.cpp  basic_stream_handle.cpp  object_handle.cpp  overlapped_handle.cpp  overlapped_ptr.cpp  random_access_handle.cpp  stream_handle.cpp
(+1364 files in other folders)
